# dawn_ik

./: .gitignore  CMakeLists.txt  LICENSE  MY_NOTES.md  README.md  dawn_ik.rviz  package.xml
assets/capsicum_plant_5_detachable/: model.config  model.sdf
cfg/: horti.yaml  lite6.yaml  lite6_with_box.yaml  mick.yaml  mick_other.yaml  repair.yaml  repair_arm_1.yaml  repair_arm_2.yaml  trolley.yaml  xarm5.yaml  xarm6.yaml  xarm7 (copy).yaml  xarm7.yaml
include/dawn_ik/: dawn_ik.h  experimental.h  goals.h  joint_trajectory_control_interface.h  robot_monitor.h  robot_parser.h  utils.h
include/salih_marangoz_thesis/: ceres_ik.h  collision_shapes.h  goals.h  joint_trajectory_control_interface.h  moveit_test.h  proximity_monitor.h  robot_conf_single_xarm7.h  robot_configuration.h  robot_monitor.h  robot_parser.h  utils.h
launch/: ceres_ik_node.launch  ceres_ik_sim.launch  collision_ik_adapter.launch  horti_fake.launch  horti_sim.launch  horti_solver.launch  lite6_fake.launch  lite6_sim.launch  lite6_solver.launch  mick_fake.launch  mick_solver.launch  mick_solver_other.launch  moveit_servo.yaml  moveit_servo_test.launch  repair_fake.launch  repair_solver.launch  repair_solver_old.launch  repair_xbot_dummy.launch  start.launch  trolley_solver.launch  xarm5_fake.launch  xarm5_sim.launch  xarm5_solver.launch  xarm6_fake.launch  xarm6_sim.launch  xarm6_solver.launch  xarm7_fake.launch  xarm7_sim.launch  xarm7_solver.launch
launch/collision_ik/: collision_ik_adapter.launch  horti_solver_collision_ik.launch  lite6_solver_collision_ik.launch  mick_solver_collision_ik.launch
launch/experiments/: run_experiment.launch  run_experiment2.launch  run_experiment_old.launch  run_experiment_other.launch  run_repair_exp.launch
launch/fake_joint/: horti_gazebo.launch  lite6_beside_table.launch  mick_gazebo.launch  xarm5_beside_table.launch  xarm6_beside_table.launch  xarm7_beside_table.launch
msg/: CollisionState.msg  Constaint.msg  Constraint.msg  Goal.msg  IKGoal.msg  JointLinkCollisionState.msg  JointLinkProximityState.msg  JointLinkState.msg  LinkState.msg  ProximityState.msg  SolverSummary.msg  tmp.msg
notebooks/: ruckig_experiment.ipynb
results/: analyze_results.ipynb  results_analyze.ipynb  results_analyze_mick.ipynb  results_plot.ipynb  results_plot_mick.ipynb
rviz/: ceres_ik.rviz  start.rviz
scripts/: collision_ik_collision_adapter.py  dawn_ik_rviz_control.py  export_to_collision_ik_obstacles.py  gazebo_killer_node.py  rviz_killer_node.py
scripts/collision_ik/: collision_ik_collision_adapter.py  collision_ik_goal_adapter.py  export_to_collision_ik_obstacles.py
scripts/experiments/: lite6_experiments.sh  mick_experiments.sh  moveit_replay_trajectory.py  publish_waypoints.py  run_all_experiments_for_selected_robot.sh  run_experiment.py  run_experiment_old.py  waypoints.txt
scripts/other/: center_joints.py  generate_wall.py  look_at_objective_marker.py  position_objective_marker.py  publish_tf_goal_pose.py
src/: ceres_ik.cpp  ceres_ik_node.cpp  dawn_ik.cpp  experimental.cpp  joint_trajectory_control_interface.cpp  main.cpp  main2.cpp  main3.cpp  node.cpp  robot_monitor.cpp  robot_parser.cpp  robot_parser_node.cpp  test.cpp  yaml.cpp
src/code_snippets/: main3.cpp  matrices.h  transforms.h
src/nodes/: robot_parser_node.cpp  solver_node.cpp
thesis/: MY_NOTES.md  THESIS_NOTES.md
thesis/assets/: design1.xml  moveit_kinematic_tree.xml
trajectories/: README.md
trajectories/horti/: fruit_picking.bag
trajectories/mick/: dangerous_xarm.bag  test.bag  test2.bag  traj2.bag
trash/: IterationSummary.msg  SolverSummary.msg  capsule_test.ipynb  point_to_line_dist.ipynb  shapes.h  start.launch.old  tmp_code.txt
trash/code_snippets/: Untitled-1.cpp  Untitled-2.cpp  Untitled-3.cpp  Untitled-4.cpp  main3.cpp
trash/constexpr_playground/: Compiler Explorer C++ Editor #1 Code (1).cpp  Compiler Explorer C++ Editor #1 Code (2).cpp  Compiler Explorer C++ Editor #1 Code (6).cpp
waypoints/: NOTE.txt  generate_waypoints.ipynb  generate_waypoints_horti.ipynb
waypoints/horti/: circle_xy.txt  circle_yz.txt  eight_xy.txt  eight_yz.txt  fruit_picking.txt
waypoints/lite6/: circle_xy.txt  circle_yz.txt  draw_square.txt  (+9 more)
worlds/: README.md  world14.world
(+50 files in other folders)
