<?xml version="1.0"?>
<package format="2">
  <name>dawn_ik</name>
  <version>0.0.0</version>
  <description>The dawn_ik package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="salih285@gmail.com">Salih Marangoz</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>moveit</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_visual_tools</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>visualization_msgs</depend>
  <depend>message_runtime</depend>
  <depend>hpp-fcl</depend>
  <depend>control_msgs</depend>

  <export>
  </export>
</package>
